<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">smartCookApp</string>
    <string name="log_in">登录</string>
    <string name="registered">注册</string>
    <string name="registered_s">注册成功</string>
    <string name="registered_f">注册失败</string>
    <string name="skip">跳过登录</string>
    <string name="submit">提交</string>
    <string name="like">点赞</string>
    <string name="liking">已点赞</string>
    <string name="pwd_forget">忘记密码</string>
    <string name="et_in_access">用户名/手机号</string>
    <string name="et_in_phone">请输入你的手机号码(可选)</string>
    <string name="et_in_pwd">请输入你的密码</string>
    <string name="err_login_1">登录信息不正确！</string>
    <string name="key_token">token</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="username">username</string>
    <string name="giz_token">giz_token</string>
    <string name="giz_uid">giz_uid</string>
    <string name="user_headurl">user_headurl</string>
    <string name="settings_user_info">编辑个人资料</string>
    <string name="devicelist_titles">我的设备</string>
    <string name="loadingtext">处理中，请稍等...</string>
    <string name="add_device">添加</string>
    <string name="QR_code">扫码绑定设备</string>
    <string name="push_type_string">推送功能仅限于企业开发者使用，目前版本暂不支持推送</string>
    <string name="next">下一步</string>
    <string name="devicedisconnected">设备已断开</string>
    <string name="sure">确定</string>
    <string name="finished">已完成上述操作</string>
    <string name="about">关于我们</string>
    <string name="head_icon">头像</string>
    <string name="sex">性别：</string>
    <string name="old">年龄：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="not_sex">不告诉你</string>
    <string name="signature">个性签名</string>
    <string name="input_signature">请输入个性签名</string>
    <string name="input_age_not_legal">输入的年龄有误</string>
    <string name="personalized_signature">我的才气都在我的食谱里</string>
    <string name="setting_remarks">注：暂不支持5G频道的Wi-Fi网络</string>
    <string name="input_wifi_pwd">请输入wi-fi密码，连接您的智能设备</string>
    <string name="network_error">请切换至Wi-Fi环境</string>
    <string name="not_ticker">Gizwits：您有新设备上线，请注意查看！</string>
    <string name="not_title">新设备</string>
    <string name="not_text">，点击可配置此设备！</string>
    <string name="notify">提醒</string>
    <string name="sorry">很抱歉，由于网络原因无法获取邀请信息</string>
    <string name="verysorry">很抱歉，无法获取到邀请信息，可能二维码信息有误</string>
    <string name="choose_mode_start">选择模组类型：</string>
    <string name="my_setting">个人设置中心</string>
    <string name="cooking_next">下一步骤</string>
    <string name="end_cooking">结束烹饪</string>
    <string name="start_cooking">开始烹饪</string>
    <string name="close_device">关闭设备</string>
    <string name="select_model">模式选择</string>
    <string name="cooking_model">烹饪模式</string>
    <string name="auto_model">自动模式</string>
    <string name="manual_model">手动模式</string>
    <string name="comment_hint">写下你的留言，建议和评论</string>
    <string name="exit_app">再按一次退出smartCook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_agreement">smartCook注册和使用协议</string>
    <string name="feedback_hint">请写下您的宝贵意见.</string>
    <string name="phone_number">手机号:</string>
    <string name="phone_hint">以便客服人员及时联系你</string>
    <string name="feedback">意见反馈</string>
    <string name="function_enable">功能不能用</string>
    <string name="other">其他</string>
    <string name="input_message_null_not">请输入您的宝贵意见。</string>
    <string name="user_message">我的消息</string>
    <string name="comment">评论</string>
    <string name="response">回复</string>
    <string name="new_fans">新的粉丝</string>
    <string name="system_message">系统消息</string>
    <string name="no_comment">没有评论</string>
    <string name="my_favorite_list">收藏的菜谱</string>
    <string name="nickname">昵称：</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="limit_nickname">2~12个字</string>
    <string name="account">账号：</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="verification_code">验证码：</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="password">密码：</string>
    <string name="limit_password">6~12位</string>
    <string name="again_password">重新输入密码：</string>
    <string name="new_password">新密码：</string>
    <string name="again_new_password">重新输入新密码：</string>
    <string name="bind_phoneNum">注册号码：</string>
    <string name="input_nickname">请输入昵称！</string>
    <string name="nickname_not_enough">昵称长度不够！</string>
    <string name="nickname_over_enough">昵称过长！</string>
    <string name="nickname_right">昵称符合规定！</string>
    <string name="input_phone">请输入号码！</string>
    <string name="phone_wrong_format">号码格式有误！</string>
    <string name="input_verification">请输入验证码！</string>
    <string name="verification_not_enough">验证码是6位数的！</string>
    <string name="verification_right">验证码正确！</string>
    <string name="pwd_not_null">请输入密码！</string>
    <string name="input_pwd">请输入密码！</string>
    <string name="pwd_not_enough">密码过短！</string>
    <string name="pwd_over_enough">密码过长！</string>
    <string name="pwd_right">密码长度正确</string>
    <string name="pwd_again_error">两次输入密码不一致！</string>
    <string name="again_pwd_not_null">再次输入密码不能为空！</string>
    <string name="again_pwd_right">再次输入密码正确</string>
    <string name="get_verification_success">验证码已发送，请注意查收！</string>
    <string name="retrieve_pwd_success">操作成功</string>
    <string name="airlink_ready_title">确认设备处于待连接状态</string>
    <string name="airlink_ready_message">接通电源，长按【KEY2】直到【RGB LED】亮绿灯</string>
    <string name="search_join">搜索并连接设备</string>
    <string name="searching_device">正在搜索设备</string>
    <string name="searched_device">已搜索到设备</string>
    <string name="trying_join_device">正在尝试与设备连接...</string>
    <string name="connection">正在连接</string>
    <string name="connection_tip">路由器、手机和设备尽量靠近</string>
    <string name="find_device">找到设备</string>
    <string name="device_register_giz">设备注册到机智云</string>
    <string name="init_device">初始化设备</string>
    <string name="connection_dev_failure">设备连接失败，是否要重试？</string>
    <string name="connection_dev_success">设备连接成功！</string>
    <string name="select_type">选择设备类型</string>
    <string name="ih_rood">智能电磁炉</string>
    <string name="search_history">历史搜索</string>
    <string name="recipes">食谱</string>
    <string name="search_not_result">没有搜索结哦</string>
    <string name="induction">电磁炉</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="min">17分钟</string>
    <string name="GIZ_SDK_PARAM_FORM_INVALID">SDK内部通讯数据格式无效</string>
    <string name="GIZ_SDK_CLIENT_NOT_AUTHEN">SDK未启动</string>
    <string name="GIZ_SDK_CLIENT_VERSION_INVALID">无效的SDK版本号</string>
    <string name="GIZ_SDK_UDP_PORT_BIND_FAILED">UDP端口绑定失败</string>
    <string name="GIZ_SDK_DAEMON_EXCEPTION">SDK后台服务发生异常</string>
    <string name="GIZ_SDK_PARAM_INVALID">接口参数无效</string>
    <string name="GIZ_SDK_APPID_LENGTH_ERROR">AppID长度错误</string>
    <string name="GIZ_SDK_LOG_PATH_INVALID">SDK日志路径无效</string>
    <string name="GIZ_SDK_LOG_LEVEL_INVALID">日志级别无效</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_SEND_FAILED">设备配网信息发送失败</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_IS_RUNNING">设备配网正在执行</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_TIMEOUT">设备配网超时</string>
    <string name="GIZ_SDK_DEVICE_DID_INVALID">设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_MAC_INVALID">设备MAC无效</string>
    <string name="GIZ_SDK_SUBDEVICE_DID_INVALID">子设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_PASSCODE_INVALID">设备验证码无效</string>
    <string name="GIZ_SDK_DEVICE_NOT_SUBSCRIBED">设备还未订阅</string>
    <string name="GIZ_SDK_DEVICE_NO_RESPONSE">设备无响应</string>
    <string name="GIZ_SDK_DEVICE_NOT_READY">设备还未就绪</string>
    <string name="GIZ_SDK_DEVICE_NOT_BINDED">设备还未绑定</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_WITH_INVALID_COMMAND">设备操作指令中包含无效指令</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_FAILED">设备操作失败</string>
    <string name="GIZ_SDK_DEVICE_GET_STATUS_FAILED">设备状态获取失败</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_TYPE_ERROR">设备操作指令参数类型错误</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_OUT_OF_RANGE">设备操作指令参数值不在有效范围内</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_NOT_WRITABLE_COMMAND">设备操作指令中包含不可写指令</string>
    <string name="GIZ_SDK_BIND_DEVICE_FAILED">设备绑定失败</string>
    <string name="GIZ_SDK_UNBIND_DEVICE_FAILED">设备解绑失败</string>
    <string name="GIZ_SDK_DNS_FAILED">DNS解析失败</string>
    <string name="GIZ_SDK_M2M_CONNECTION_SUCCESS">M2M服务器连接成功</string>
    <string name="GIZ_SDK_SET_SOCKET_NON_BLOCK_FAILED">socket非阻塞设置失败</string>
    <string name="GIZ_SDK_CONNECTION_TIMEOUT">连接超时</string>
    <string name="GIZ_SDK_CONNECTION_REFUSED">连接被拒绝</string>
    <string name="GIZ_SDK_CONNECTION_ERROR">发生了连接错误</string>
    <string name="GIZ_SDK_CONNECTION_CLOSED">连接被对端关闭</string>
    <string name="GIZ_SDK_SSL_HANDSHAKE_FAILED">ssl握手失败</string>
    <string name="GIZ_SDK_DEVICE_LOGIN_VERIFY_FAILED">设备登录验证失败</string>
    <string name="GIZ_SDK_INTERNET_NOT_REACHABLE">手机外网无法访问</string>
    <string name="GIZ_SDK_HTTP_ANSWER_FORMAT_ERROR">HTTP应答格式错误</string>
    <string name="GIZ_SDK_HTTP_ANSWER_PARAM_ERROR">HTTP应答数据错误</string>
    <string name="GIZ_SDK_HTTP_SERVER_NO_ANSWER">HTTP服务端无应答</string>
    <string name="GIZ_SDK_HTTP_REQUEST_FAILED">HTTP请求失败</string>
    <string name="GIZ_SDK_OTHERWISE">其他错误</string>
    <string name="GIZ_SDK_MEMORY_MALLOC_FAILED">内存分配失败</string>
    <string name="GIZ_SDK_THREAD_CREATE_FAILED">线程创建失败</string>
    <string name="GIZ_SDK_USER_ID_INVALID">登录用户ID无效</string>
    <string name="GIZ_SDK_TOKEN_INVALID">登录token无效</string>
    <string name="GIZ_SDK_GROUP_ID_INVALID">设备分组的组ID无效</string>
    <string name="GIZ_SDK_GROUPNAME_INVALID">设备分组的组名称无效</string>
    <string name="GIZ_SDK_GROUP_PRODUCTKEY_INVALID">设备分组的组类型无效</string>
    <string name="GIZ_SDK_GROUP_FAILED_DELETE_DEVICE">设备分组删除失败</string>
    <string name="GIZ_SDK_GROUP_FAILED_ADD_DEVICE">设备分组添加失败</string>
    <string name="GIZ_SDK_GROUP_GET_DEVICE_FAILED">设备分组获取失败</string>
    <string name="GIZ_SDK_DATAPOINT_NOT_DOWNLOAD">设备数据点配置文件还未下载</string>
    <string name="GIZ_SDK_DATAPOINT_SERVICE_UNAVAILABLE">设备数据点配置服务不可用</string>
    <string name="GIZ_SDK_DATAPOINT_PARSE_FAILED">设备数据点解析失败</string>
    <string name="GIZ_SDK_SDK_NOT_INITIALIZED">SDK还未初始化</string>
    <string name="GIZ_SDK_APK_CONTEXT_IS_NULL">Android context为空，无法启动SDK</string>
    <string name="GIZ_SDK_APK_PERMISSION_NOT_SET">使用SDK所需要的Android权限还没有设置</string>
    <string name="GIZ_SDK_CHMOD_DAEMON_REFUSED">SDK后台服务进程的执行权限修改失败</string>
    <string name="GIZ_SDK_EXEC_DAEMON_FAILED">SDK后台服务进程启动失败</string>
    <string name="GIZ_SDK_EXEC_CATCH_EXCEPTION">SDK后台服务进程启动发生异常</string>
    <string name="GIZ_SDK_APPID_IS_EMPTY">AppID为空，无法使用SDK</string>
    <string name="GIZ_SDK_UNSUPPORTED_API">此API已废弃，不再提供支持</string>
    <string name="GIZ_SDK_REQUEST_TIMEOUT">SDK接口执行超时</string>
    <string name="GIZ_SDK_DAEMON_VERSION_INVALID">SDK后台服务版本无效</string>
    <string name="GIZ_SDK_PHONE_NOT_CONNECT_TO_SOFTAP_SSID">手机没有连接设备热点</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_SSID_NOT_MATCHED">手机当前Wifi与设备配网SSID不匹配，无法完成设备配网</string>
    <string name="GIZ_SDK_NOT_IN_SOFTAPMODE">设备没有在softap配网模式下</string>
    <string name="GIZ_SDK_PHONE_WIFI_IS_UNAVAILABLE">手机当前不是Wifi网络</string>
    <string name="GIZ_SDK_RAW_DATA_TRANSMIT">当前为原始数据透传方式</string>
    <string name="GIZ_SDK_PRODUCT_IS_DOWNLOADING">正在下载设备数据点配置文件</string>
    <string name="GIZ_SDK_START_SUCCESS">SDK启动成功</string>
    <string name="GIZ_SITE_PRODUCTKEY_INVALID">产品类型标识码无效</string>
    <string name="GIZ_SITE_DATAPOINTS_NOT_DEFINED">产品数据点未定义</string>
    <string name="GIZ_SITE_DATAPOINTS_NOT_MALFORME">产品数据点无效</string>
    <string name="GIZ_OPENAPI_MAC_ALREADY_REGISTERED">设备MAC已经注册</string>
    <string name="cancel">取消</string>
</resources>