<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_button2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".module.welcomeModule.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_corners_w"
        android:orientation="vertical"
        android:padding="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/nickname_tv"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname" />

            <EditText
                android:id="@+id/nickname_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/limit_nickname"
                android:text=""
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/nickname_tv" />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="#eee"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            >

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/account"
                />

            <EditText
                android:id="@+id/phone_num_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:inputType="textPhonetic"
                android:hint="@string/please_input_phone_num"
                android:layout_centerVertical="true"
                android:text=""
                android:textSize="14sp"
                android:layout_toEndOf="@+id/username_tv" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/verification_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/verification_code"
                />

            <EditText
                android:id="@+id/verification_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/please_input_verification_code"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="56dp"
                android:layout_toStartOf="@+id/get_verification_tv" />
            
            <TextView
                android:id="@+id/get_verification_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_verification_code"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorPrimaryDark"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            
            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/password"
                />
            
            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:hint="@string/limit_password"
                android:text=""
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/password_tv" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            >
            
            <TextView
                android:id="@+id/again_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/again_password"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
            
            <EditText
                android:id="@+id/again_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/limit_password"
                android:text=""
                android:inputType="textPassword"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/again_password_tv" />
        </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_registered"
        style="@style/AppButton"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_orange"
        android:text="@string/submit" />
</LinearLayout>
