<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".module.welcomeModule.WelcomeActivity">


    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:text="@string/skip"
        android:clickable="true"
        android:textColor="#eee"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_login"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/app_orange"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/btn_registered"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_gray_blue"
        android:text="@string/registered" />
</LinearLayout>
