<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_button2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.masterdroup.minimasterapp.welcomeModule.WelcomeActivity">

    <TextView
        android:id="@+id/et_pwd_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:text="@string/pwd_forget"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_corners_w"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/et_in_access"
            android:textSize="14sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:visibility="gone"
            android:background="#eee" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/et_in_pwd"
            android:textSize="14sp" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_registered"
        style="@style/AppButton"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_orange"
        android:text="@string/submit" />
</LinearLayout>
